--- a/static/css/main.less
+++ b/static/css/main.less
@@ -10,6 +10,7 @@
 // @import combined CF component Less and make any overrides
 @import (less) "../../vendor/cf-concat/cf.less";
 @cf-icons-path: "../fonts/";
+@box-sizing-polyfill-path: "/cfgov-refresh/static/vendor/box-sizing-polyfill";
 
 //* @import other components' Less below
 @import (less) "../../vendor/font-awesome/font-awesome.css";
