--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -3,6 +3,7 @@
    utilities
    ========================================================================== */
 
+
 /* topdoc
   name: Less mixins
   family: cfgov-utilities
@@ -51,6 +52,12 @@
         color: @black;
     }
 }
+
+.u-flexible-image() {
+    max-width: 100%;
+    -ms-interpolation-mode: bicubic;
+}
+
 
 /* topdoc
     name: EOF
