--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4895,19 +4895,20 @@ a .icon-flip-vertical:before {
 }
 /* topdoc
   name: Media object with image
-  family: cfgov-media-object-hide
+  family: cfgov-media-object
   patterns:
     - markup: |
         <article class="media-object media-object__with-image">
-            <img src="http://placekitten.com/290/150">
+            <div class="media-object_img-container">
+                <img src="http://placekitten.com/290/155" class="media-object_img">
+            </div>
             <h1 class="media-object_header">
-                Preventing illegal discrimination in auto lending
+                Live from Phoenix!
             </h1>
             <p class="media-object_text">
-                Every year, millions of American families buy a car –
-                and it will be one of the most significant purchases they make.
-                One key priority for us is protecting consumers from the silent
-                pickpocket of discrimination.
+                This event was a training for housing counselors, legal aid
+                attorneys, and other advocates on the new mortgage servicing
+                rules that take effect today. 
             </p>
             <p class="media-object_byline">
                 By Patrice Ficklin
@@ -4916,6 +4917,34 @@ a .icon-flip-vertical:before {
   tags:
     - cfgov-media-object
 */
+@media only all and (min-width: 48em) {
+  .media-object__with-image {
+    position: relative;
+    min-height: 9.6875em;
+    padding-left: 11.5625em;
+  }
+}
+@media only all and (min-width: 48em) {
+  .media-object_img-container {
+    position: absolute;
+    left: 0;
+    width: 9.6875em;
+    overflow: hidden;
+  }
+}
+.media-object_img {
+  max-width: 100%;
+  -ms-interpolation-mode: bicubic;
+  margin-bottom: 0.5em;
+}
+@media only all and (min-width: 48em) {
+  .media-object_img {
+    width: 290px;
+    max-width: 290px;
+    margin-bottom: 0;
+    margin-left: -50%;
+  }
+}
 /* topdoc
   name: EOF
   eof: true
