Adds .u-flexible-image() to docs pattern list.

--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -12,6 +12,8 @@
       - .u-right();
     - codenotes:
       - .u-unstyled-link();
+    - codenotes:
+      - .u-flexible-image();
   tags:
     - cfgov-utilities
 */
