--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4712,6 +4712,8 @@ a .icon-flip-vertical:before {
       - .u-right();
     - codenotes:
       - .u-unstyled-link();
+    - codenotes:
+      - .u-flexible-image();
   tags:
     - cfgov-utilities
 */
