--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4650,8 +4650,42 @@ a .icon-flip-vertical:before {
   border: 2px dashed #babbbd;
   background: #f8f8f8;
 }
+/* Base styles
+   ========================================================================== */
+img {
+  max-width: 100%;
+}
 /* Project-specific styles
    ========================================================================== */
+/* ==========================================================================
+   cfgov-refresh
+   utilities
+   ========================================================================== */
+/* topdoc
+  name: Less mixins
+  family: cfgov-utilities
+  patterns:
+    - codenotes:
+        - .u-right();
+      notes:
+        - "IE7 float: right drop bug fixes:"
+        - "1. If the float: right follows an element in the html structure that
+          should be to its left (and not above it), then that preceding
+          element(s) must be float: left.
+          http://stackoverflow.com/questions/10981767/clean-css-fix-of-ie7s-float-right-drop-bug#answer-11437688"
+        - "2. Simply change the markup order so that the element floating right
+          comes before the element to its left."
+    - codenotes:
+        - .u-unstyled-link();
+    - codenotes:
+        - .u-flexible-image();
+  tags:
+    - cfgov-utilities
+*/
+/* topdoc
+    name: EOF
+    eof: true
+*/
 /* ==========================================================================
    cfgov-refresh
    vars
@@ -4699,35 +4733,6 @@ a .icon-flip-vertical:before {
 /* topdoc
   name: EOF
   eof: true
-*/
-/* ==========================================================================
-   cfgov-refresh
-   utilities
-   ========================================================================== */
-/* topdoc
-  name: Less mixins
-  family: cfgov-utilities
-  patterns:
-    - codenotes:
-        - .u-right();
-      notes:
-        - "IE7 float: right drop bug fixes:"
-        - "1. If the float: right follows an element in the html structure that
-          should be to its left (and not above it), then that preceding
-          element(s) must be float: left.
-          http://stackoverflow.com/questions/10981767/clean-css-fix-of-ie7s-float-right-drop-bug#answer-11437688"
-        - "2. Simply change the markup order so that the element floating right
-          comes before the element to its left."
-    - codenotes:
-        - .u-unstyled-link();
-    - codenotes:
-        - .u-flexible-image();
-  tags:
-    - cfgov-utilities
-*/
-/* topdoc
-    name: EOF
-    eof: true
 */
 /* ==========================================================================
    cfgov-refresh
@@ -4856,23 +4861,80 @@ a .icon-flip-vertical:before {
   patterns:
     - markup: |
         <article class="media-object">
-            <h1 class="media-object_header">
+            <div class="media-object_image-container">
+                <img src="http://placekitten.com/290/155" class="media-object_image">
+            </div>
+            <div class="media-object_text-container">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Dolorum non sapiente nobis molestias delectus optio ipsam
+                    voluptas esse blanditiis ipsa debitis consequuntur excepturi
+                    accusantium doloribus dicta fugiat itaque ab porro.
+                </p>
+            </div>
+        </article>
+  tags:
+    - cfgov-media-object
+*/
+@media only all and (min-width: 48em) {
+  .media-object {
+    position: relative;
+    min-height: 9.9375em;
+    padding-left: 11.5625em;
+  }
+}
+@media only all and (min-width: 48em) {
+  .media-object_image-container {
+    position: absolute;
+    top: 0.25em;
+    left: 0;
+    width: 9.6875em;
+    overflow: hidden;
+  }
+}
+.media-object_image {
+  margin-bottom: 0.5em;
+}
+@media only all and (min-width: 48em) {
+  .media-object_image {
+    display: block;
+    width: 290px;
+    max-width: 290px;
+    margin-bottom: 0;
+    margin-left: -50%;
+  }
+}
+/* topdoc
+  name: EOF
+  eof: true
+*/
+/* ==========================================================================
+   cfgov-refresh
+   summary
+   ========================================================================== */
+/* topdoc
+  name: Summary
+  family: cfgov-summary
+  patterns:
+    - markup: |
+        <article class="summary">
+            <h1 class="summary_header">
                 Preventing illegal discrimination in auto lending
             </h1>
-            <p class="media-object_text">
+            <p class="summary_text">
                 Every year, millions of American families buy a car –
                 and it will be one of the most significant purchases they make.
                 One key priority for us is protecting consumers from the silent
                 pickpocket of discrimination.
             </p>
-            <p class="media-object_byline">
+            <p class="summary_byline">
                 By Patrice Ficklin
             </p>
         </article>
   tags:
-    - cfgov-media-object
+    - cfgov-summary
 */
-.media-object_header {
+.summary_header {
   margin-top: 0;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
@@ -4882,7 +4944,7 @@ a .icon-flip-vertical:before {
   line-height: 1.2727272727272727;
 }
 @media only all and (min-width: 48em) {
-  .media-object_header {
+  .summary_header {
     margin-top: 0;
     font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
     font-style: normal;
@@ -4892,70 +4954,105 @@ a .icon-flip-vertical:before {
     line-height: 1.2692307692307692;
   }
 }
-.media-object_text {
+.summary_text {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: #43484e;
 }
-.media-object_byline {
+.summary_byline {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
 }
 /* topdoc
-  name: Media object with image
-  family: cfgov-media-object
+  name: EOF
+  eof: true
+*/
+/* ==========================================================================
+   cfgov-refresh
+   content-blocks
+   ========================================================================== */
+/* topdoc
+  name: Blog
+  family: cfgov-content-blocks
   patterns:
-    - markup: |
-        <article class="media-object media-object__with-image">
-            <div class="media-object_img-container">
-                <img src="http://placekitten.com/290/155" class="media-object_img">
+    - name: Post preview (no image)
+      codenotes:
+        - |
+          .post-preview
+            .meta-header
+              .meta-header_date
+              .meta-header_heading
+            .summary
+              .sumary_header
+              .sumary_text
+              .sumary_byline
+      markup: |
+        <article class="post-preview">
+            <div class="meta-header">
+                <span class="date meta-header_date">
+                    Nov 4, 2013
+                </span>
+                <a href="#" class="category-slug meta-header_heading">
+                    <i class="cf-icon cf-icon-credit-card"></i>
+                    Consumer finance
+                </a>
             </div>
-            <h1 class="media-object_header">
-                Live from Phoenix!
-            </h1>
-            <p class="media-object_text">
-                This event was a training for housing counselors, legal aid
-                attorneys, and other advocates on the new mortgage servicing
-                rules that take effect today. 
-            </p>
-            <p class="media-object_byline">
-                By Patrice Ficklin
-            </p>
+            <div class="summary">
+                <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
+                <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
+                <p class="summary_byline">By Patrice Ficklin</p>
+            </div>
+        </article>
+    - name: Post preview (with image)
+      codenotes:
+        - |
+          .post-preview
+            .meta-header
+              .meta-header_date
+              .meta-header_heading
+            .media-object
+              .media-object_image-container
+              .media-object_text-container.summary
+                .sumary_header
+                .sumary_text
+                .sumary_byline
+      markup: |
+        <article class="post-preview">
+            <div class="meta-header">
+                <span class="date meta-header_date">
+                    Nov 4, 2013
+                </span>
+                <a href="#" class="category-slug meta-header_heading">
+                    <i class="cf-icon cf-icon-credit-card"></i>
+                    Consumer finance
+                </a>
+            </div>
+            <div class="media-object">
+                <div class="media-object_image-container">
+                    <img src="http://placekitten.com/290/155" class="media-object_image">
+                </div>
+                <div class="media-object_text-container summary">
+                    <h1 class="summary_header">
+                        Live from Phoenix!
+                    </h1>
+                    <p class="summary_text">
+                        This event was a training for housing counselors, legal aid
+                        attorneys, and other advocates on the new mortgage servicing
+                        rules that take effect today. 
+                    </p>
+                    <p class="summary_byline">
+                        By Patrice Ficklin
+                    </p>
+                </div>
+            </div>
         </article>
   tags:
-    - cfgov-media-object
+    - cfgov-blocks
 */
-@media only all and (min-width: 48em) {
-  .media-object__with-image {
-    position: relative;
-    min-height: 9.9375em;
-    padding-left: 11.5625em;
-  }
-}
-@media only all and (min-width: 48em) {
-  .media-object_img-container {
-    position: absolute;
-    top: 0.25em;
-    left: 0;
-    width: 9.6875em;
-    overflow: hidden;
-  }
-}
-.media-object_img {
-  max-width: 100%;
-  -ms-interpolation-mode: bicubic;
-  margin-bottom: 0.5em;
-}
-@media only all and (min-width: 48em) {
-  .media-object_img {
-    display: block;
-    width: 290px;
-    max-width: 290px;
-    margin-bottom: 0;
-    margin-left: -50%;
-  }
+.post-preview + .post-preview {
+  margin-top: 50px;
 }
 /* topdoc
   name: EOF
@@ -5030,7 +5127,4 @@ a .icon-flip-vertical:before {
 .footer {
   padding: 1.5em 0;
   background: #f1f2f2;
-}
-.post-preview + .post-preview {
-  margin-top: 50px;
 }
