--- a/static/css/content-blocks.less
+++ b/static/css/content-blocks.less
@@ -8,6 +8,26 @@
   name: Blog
   family: cfgov-content-blocks
   patterns:
+    - name: Category slugs
+      markup: |
+        <a href="#" class="category-slug">
+            <i class="cf-icon cf-icon-help"></i>
+            Announcements & updates
+        </a><br>
+        <a href="#" class="category-slug">
+            <i class="cf-icon cf-icon-help"></i>
+            Consumer information
+        </a><br>
+        <a href="#" class="category-slug">
+            <i class="cf-icon cf-icon-help"></i>
+            Engagement
+        </a><br>
+        <a href="#" class="category-slug">
+            <i class="cf-icon cf-icon-help"></i>
+            Innovation & data
+        </a>
+      notes:
+        - "Official icons are still being developed, hence the ?."
     - name: Post preview (no image)
       codenotes:
         - |
@@ -26,8 +46,8 @@
                     Nov 4, 2013
                 </span>
                 <a href="#" class="category-slug meta-header_heading">
-                    <i class="cf-icon cf-icon-credit-card"></i>
-                    Consumer finance
+                    <i class="cf-icon cf-icon-help"></i>
+                    Consumer information
                 </a>
             </div>
             <div class="summary">
@@ -56,8 +76,8 @@
                     Nov 4, 2013
                 </span>
                 <a href="#" class="category-slug meta-header_heading">
-                    <i class="cf-icon cf-icon-credit-card"></i>
-                    Consumer finance
+                    <i class="cf-icon cf-icon-help"></i>
+                    Consumer information
                 </a>
             </div>
             <div class="media-object">
