--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -8,7 +8,8 @@
   name: Summary
   family: cfgov-summary
   patterns:
-    - markup: |
+    - name: Default summary
+      markup: |
         <article class="summary">
             <h1 class="summary_header">
                 Preventing illegal discrimination in auto lending
