--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4696,7 +4696,7 @@ img {
   patterns:
     - name: Size calculations
       notes:
-        - "You shouldn't need to use these vars directly,
+        - "You shouldn't need to use these variables directly,
           they're used to create the @respond-to vars which you should use instead."
       codenotes:
         - "@small-screens-min"
@@ -4715,6 +4715,8 @@ img {
         - "@respond-to-large-screens-min"
         - "@respond-to-large-screens-max"
         - "@respond-to-extralarge-screens-min"
+      notes:
+        - "Use these variables to easily target screen size ranges."
     - name: "Usage"
       codenotes:
         - |
@@ -4742,7 +4744,8 @@ img {
   name: Date
   family: cfgov-meta
   patterns:
-    - markup: |
+    - name: Default date
+      markup: |
         <span class="date">
             Nov 4, 2013
         </span>
@@ -4770,7 +4773,8 @@ img {
   name: Category slug
   family: cfgov-meta
   patterns:
-    - markup: |
+    - name: Default category slug
+      markup: |
         <a href="#" class="category-slug">
             <i class="cf-icon cf-icon-credit-card"></i>
             Consumer finance
@@ -4822,16 +4826,24 @@ img {
   name: Meta header
   family: cfgov-meta
   patterns:
-    - markup: |
+    - name: Default meta header
+      markup: |
         <div class="meta-header">
-            <a href="#" class="category-slug meta-header_heading">
+            <a href="#" class="meta-header_heading category-slug">
                 <i class="cf-icon cf-icon-credit-card"></i>
                 Consumer finance
             </a>
-            <span class="date meta-header_date">
+            <span class="meta-header_date date">
                 Nov 4, 2013
             </span>
         </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .meta-header
+            .meta-header_heading.category-slug
+            .meta-header_date.date
   tags:
     - cfgov-meta
 */
@@ -4859,7 +4871,8 @@ img {
   name: Media object
   family: cfgov-media-object
   patterns:
-    - markup: |
+    - name: Default media object
+      markup: |
         <article class="media-object">
             <div class="media-object_image-container">
                 <img src="http://placekitten.com/290/155" class="media-object_image">
@@ -4873,6 +4886,14 @@ img {
                 </p>
             </div>
         </article>
+      codenotes:
+        - |
+          Structural sheat sheet:
+          -----------------------
+          .media-object
+            .media-object_image-container
+              .media-object_image
+            .media-object_text-container
   tags:
     - cfgov-media-object
 */
@@ -4916,7 +4937,8 @@ img {
   name: Summary
   family: cfgov-summary
   patterns:
-    - markup: |
+    - name: Default summary
+      markup: |
         <article class="summary">
             <h1 class="summary_header">
                 Preventing illegal discrimination in auto lending
