--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -8,7 +8,8 @@
   name: Media object
   family: cfgov-media-object
   patterns:
-    - markup: |
+    - name: Default media object
+      markup: |
         <article class="media-object">
             <div class="media-object_image-container">
                 <img src="http://placekitten.com/290/155" class="media-object_image">
@@ -22,6 +23,14 @@
                 </p>
             </div>
         </article>
+      codenotes:
+        - |
+          Structural sheat sheet:
+          -----------------------
+          .media-object
+            .media-object_image-container
+              .media-object_image
+            .media-object_text-container
   tags:
     - cfgov-media-object
 */
