Trying a fix for the bb float bug.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4853,10 +4853,10 @@ img {
   border-bottom: 1px solid #babbbd;
 }
 .meta-header_heading {
+  float: left;
   margin-bottom: 0;
 }
 .meta-header_date {
-  display: inline-block;
   float: right;
   margin-bottom: 0;
 }
