--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -75,11 +75,11 @@
 }
 
 .meta-header_heading {
+    float: left;
     margin-bottom: 0;
 }
 
 .meta-header_date {
-    display: inline-block;
     .u-right();
     margin-bottom: 0;
 }
