--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5738,11 +5738,11 @@ img {
 }
 
 .meta-header_heading {
+  float: left;
   margin-bottom: 0;
 }
 
 .meta-header_date {
-  display: inline-block;
   float: right;
   margin-bottom: 0;
 }
