Trying a fix for the bb float bug.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4853,12 +4853,12 @@ img {
   border-bottom: 1px solid #babbbd;
 }
 .meta-header_heading {
-  float: left;
   margin-bottom: 0;
 }
 .meta-header_date {
   float: right;
   margin-bottom: 0;
+  white-space: nowrap;
 }
 /* topdoc
   name: EOF
