--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -75,13 +75,13 @@
 }
 
 .meta-header_heading {
-    float: left;
     margin-bottom: 0;
 }
 
 .meta-header_date {
     .u-right();
     margin-bottom: 0;
+    white-space: nowrap;
 }
 
 /* topdoc
