Adds alt attributes to images in media objects.

--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -12,7 +12,7 @@
       markup: |
         <article class="media-object">
             <div class="media-object_image-container">
-                <img src="http://placekitten.com/290/155" class="media-object_image">
+                <img class="media-object_image" src="http://placekitten.com/290/155" alt="">
             </div>
             <div class="media-object_text-container">
                 <p>
