--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4876,7 +4876,7 @@ img {
       markup: |
         <article class="media-object">
             <div class="media-object_image-container">
-                <img src="http://placekitten.com/290/155" class="media-object_image">
+                <img class="media-object_image" src="http://placekitten.com/290/155" alt="">
             </div>
             <div class="media-object_text-container">
                 <p>
@@ -5074,7 +5074,7 @@ img {
             </div>
             <div class="media-object">
                 <div class="media-object_image-container">
-                    <img src="http://placekitten.com/290/155" class="media-object_image">
+                    <img class="media-object_image" src="http://placekitten.com/290/155" alt="">
                 </div>
                 <div class="media-object_text-container summary">
                     <h1 class="summary_header">
