Revises meta-header element names.

--- a/static/css/content-blocks.less
+++ b/static/css/content-blocks.less
@@ -33,8 +33,8 @@
         - |
           .post-preview
             .meta-header
-              .meta-header_date
-              .meta-header_heading
+              .meta-header_right
+              .meta-header_left
             .summary
               .sumary_header
               .sumary_text
@@ -42,10 +42,10 @@
       markup: |
         <article class="post-preview">
             <div class="meta-header">
-                <span class="date meta-header_date">
+                <span class="date meta-header_right">
                     Nov 4, 2013
                 </span>
-                <a href="#" class="category-slug meta-header_heading">
+                <a href="#" class="category-slug meta-header_left">
                     <i class="cf-icon cf-icon-help"></i>
                     Consumer information
                 </a>
@@ -61,8 +61,8 @@
         - |
           .post-preview
             .meta-header
-              .meta-header_date
-              .meta-header_heading
+              .meta-header_right
+              .meta-header_left
             .media-object
               .media-object_image-container
               .media-object_text-container.summary
@@ -72,10 +72,10 @@
       markup: |
         <article class="post-preview">
             <div class="meta-header">
-                <span class="date meta-header_date">
+                <span class="date meta-header_right">
                     Nov 4, 2013
                 </span>
-                <a href="#" class="category-slug meta-header_heading">
+                <a href="#" class="category-slug meta-header_left">
                     <i class="cf-icon cf-icon-help"></i>
                     Consumer information
                 </a>
