--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -19,6 +19,7 @@
 .date {
     .h5();
     color: @gray;
+    white-space: nowrap;
 }
 
 
@@ -32,6 +33,8 @@
             <i class="cf-icon cf-icon-credit-card"></i>
             Consumer finance
         </a>
+      notes:
+        - "Always use a link element or else you will get unwanted hover styles."
   tags:
     - cfgov-meta
 */
@@ -49,11 +52,11 @@
     - name: Default meta header
       markup: |
         <div class="meta-header">
-            <a href="#" class="meta-header_heading category-slug">
+            <a href="#" class="meta-header_left category-slug">
                 <i class="cf-icon cf-icon-credit-card"></i>
                 Consumer finance
             </a>
-            <span class="meta-header_date date">
+            <span class="meta-header_right date">
                 Nov 4, 2013
             </span>
         </div>
@@ -62,8 +65,33 @@
           Structural cheat sheet:
           -----------------------
           .meta-header
-            .meta-header_heading.category-slug
-            .meta-header_date.date
+            .meta-header_left
+            .meta-header_right
+      notes:
+        - "Note that the example shows .meta-header_left using the
+          .category-slug pattern and .meta-header_right using the .date pattern
+          but you could use other patterns in place of them. Or you can even
+          swap them so that date is attached to .meta-header_left and
+          .category-slug is attacked to .meta-header_right."
+    - name: Alternate meta header arrangements
+      markup: |
+        <div class="meta-header">
+            <span class="meta-header_left date">
+                Nov 4, 2013
+            </span>
+            <a href="#" class="meta-header_right category-slug">
+                <i class="cf-icon cf-icon-credit-card"></i>
+            </a>
+        </div>
+        <br>
+        <div class="meta-header">
+            <a href="#" class="meta-header_left category-slug">
+                <i class="cf-icon cf-icon-credit-card"></i>
+                Consumer finance
+            </a>
+        </div>
+      notes:
+        - "Just some random variations to show off what you could do."
   tags:
     - cfgov-meta
 */
@@ -74,14 +102,13 @@
     border-bottom: 1px solid @gray-50;
 }
 
-.meta-header_heading {
+.meta-header_left {
     margin-bottom: 0;
 }
 
-.meta-header_date {
+.meta-header_right {
     .u-right();
     margin-bottom: 0;
-    white-space: nowrap;
 }
 
 /* topdoc
