--- a/static/css/content-blocks.less
+++ b/static/css/content-blocks.less
@@ -33,8 +33,8 @@
         - |
           .post-preview
             .meta-header
-              .meta-header_right
-              .meta-header_left
+              .meta-header_right.date
+              .meta-header_left.category-slug
             .summary
               .sumary_header
               .sumary_text
@@ -42,10 +42,10 @@
       markup: |
         <article class="post-preview">
             <div class="meta-header">
-                <span class="date meta-header_right">
+                <span class="meta-header_right date">
                     Nov 4, 2013
                 </span>
-                <a href="#" class="category-slug meta-header_left">
+                <a href="#" class="meta-header_left category-slug">
                     <i class="cf-icon cf-icon-help"></i>
                     Consumer information
                 </a>
@@ -61,8 +61,8 @@
         - |
           .post-preview
             .meta-header
-              .meta-header_right
-              .meta-header_left
+              .meta-header_right.date
+              .meta-header_left.slug
             .media-object
               .media-object_image-container
               .media-object_text-container.summary
@@ -72,10 +72,10 @@
       markup: |
         <article class="post-preview">
             <div class="meta-header">
-                <span class="date meta-header_right">
+                <span class="meta-header_right date">
                     Nov 4, 2013
                 </span>
-                <a href="#" class="category-slug meta-header_left">
+                <a href="#" class="meta-header_left category-slug">
                     <i class="cf-icon cf-icon-help"></i>
                     Consumer information
                 </a>
