--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5947,8 +5947,8 @@ img {
         - |
           .post-preview
             .meta-header
-              .meta-header_right
-              .meta-header_left
+              .meta-header_right.date
+              .meta-header_left.category-slug
             .summary
               .sumary_header
               .sumary_text
@@ -5956,10 +5956,10 @@ img {
       markup: |
         <article class="post-preview">
             <div class="meta-header">
-                <span class="date meta-header_right">
+                <span class="meta-header_right date">
                     Nov 4, 2013
                 </span>
-                <a href="#" class="category-slug meta-header_left">
+                <a href="#" class="meta-header_left category-slug">
                     <i class="cf-icon cf-icon-help"></i>
                     Consumer information
                 </a>
@@ -5975,8 +5975,8 @@ img {
         - |
           .post-preview
             .meta-header
-              .meta-header_right
-              .meta-header_left
+              .meta-header_right.date
+              .meta-header_left.slug
             .media-object
               .media-object_image-container
               .media-object_text-container.summary
@@ -5986,10 +5986,10 @@ img {
       markup: |
         <article class="post-preview">
             <div class="meta-header">
-                <span class="date meta-header_right">
+                <span class="meta-header_right date">
                     Nov 4, 2013
                 </span>
-                <a href="#" class="category-slug meta-header_left">
+                <a href="#" class="meta-header_left category-slug">
                     <i class="cf-icon cf-icon-help"></i>
                     Consumer information
                 </a>
